--- a/css/slider.css
+++ b/css/slider.css
@@ -1,9 +1,10 @@
 .slider {
-    width: 300px;
-    height: 8px;
+    max-width: 100%;
+    height: 5px;
     background-color: #e9ecef; /* gray background */
     border-radius: 4px;
     position: relative;
+    margin: 1rem 0;
 }
 
 .slider-fill {
@@ -16,14 +17,43 @@
 .slider-thumb {
     position: absolute;
     top: 50%;
-    left: 0%; /* Match width of .slider-fill */
+    left: 0; /* Match width of .slider-fill */
     transform: translate(-50%, -50%);
-    width: 18px;
-    height: 18px;
+    width: 12px;
+    height: 12px;
     background-color: #0d6efd;
     border-radius: 50%;
     box-shadow: 0 0 0 2px white;
 }
+
+.slider.red .slider-fill {
+    background-color: red !important;
+}
+.slider.red .slider-thumb {
+    background-color: red !important;
+}
+
+.slider.green .slider-fill {
+    background-color: MediumSeaGreen !important;
+}
+.slider.green .slider-thumb {
+    background-color: MediumSeaGreen !important;
+}
+
+.slider.orange .slider-fill {
+    background-color: lightsalmon !important;
+}
+.slider.orange .slider-thumb {
+    background-color: lightsalmon !important;
+}
+
+.slider.purple .slider-fill {
+    background-color: purple !important;
+}
+.slider.purple .slider-thumb {
+    background-color: purple !important;
+}
+
 
 .slider.p10 .slider-fill {
     width: 10% !important;
@@ -36,4 +66,52 @@
 }
 .slider.p20 .slider-thumb  {
     left: 20% !important;
+}
+.slider.p30 .slider-fill {
+    width: 30% !important;
+}
+.slider.p30 .slider-thumb  {
+    left: 30% !important;
+}
+.slider.p40 .slider-fill {
+    width: 40% !important;
+}
+.slider.p40 .slider-thumb  {
+    left: 40% !important;
+}
+.slider.p50 .slider-fill {
+    width: 50% !important;
+}
+.slider.p50 .slider-thumb  {
+    left: 50% !important;
+}
+.slider.p60 .slider-fill {
+    width: 60% !important;
+}
+.slider.p60 .slider-thumb  {
+    left: 60% !important;
+}
+.slider.p70 .slider-fill {
+    width: 70% !important;
+}
+.slider.p70 .slider-thumb  {
+    left: 70% !important;
+}
+.slider.p80 .slider-fill {
+    width: 80% !important;
+}
+.slider.p80 .slider-thumb  {
+    left: 80% !important;
+}
+.slider.p90 .slider-fill {
+    width: 90% !important;
+}
+.slider.p90 .slider-thumb  {
+    left: 90% !important;
+}
+.slider.p100 .slider-fill {
+    width: 100% !important;
+}
+.slider.p100 .slider-thumb  {
+    left: 100% !important;
 }
