Adding skills section

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,6 @@ nav {
     color: #555;
 }
 
-#education, #experience, #languages {
+#education, #experience, #skills, #other {
     margin-top: 2rem;
 }
