--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,25 +25,6 @@ nav {
     }
 }
 
-
-@media screen and (min-width: 768px) {
-    .languages-section {
-        padding-left: 0 !important;
-    }
-    .hobbies-section {
-        padding-right: 0 !important;
-    }
-}
-@media screen and (max-width: 768px) {
-    .languages-section {
-        padding: 0 0 1.5rem 0 !important;
-    }
-    .hobbies-section {
-        padding: 0 !important;
-    }
-}
-
-
 .container-center {
     position: relative;
     display: flex;
@@ -57,6 +38,22 @@ nav {
     margin-top: 6rem;
 }
 
+.hero-card .card-body > h2 {
+    /* font-size: 1.5rem; */
+    font-weight: 700;
+    margin-bottom: 1.5rem;
+    padding-bottom: 5px;
+    border-bottom: 1px solid lightgray;
+    width: fit-content;
+}
+
+@media screen and (max-width: 768px) {
+    #profile-hero {
+        margin-top: 3rem;
+    }
+    
+}
+
 .hero-card {
     /* width: 70vw; */
     border: none !important;
@@ -67,6 +64,16 @@ nav {
     max-width: 100%;
     height: 200px;
     object-fit: cover;
+}
+
+@media screen and (max-width: 768px) {
+    #profile-hero .profile-img {
+        height: 150px;
+    }
+    #profile-hero .icon-wrapper {
+        border-bottom: 1px solid lightgray;
+        padding-bottom: 1rem;
+    }
 }
 
 .contact-icons {
@@ -91,5 +98,11 @@ nav {
 }
 
 #education, #experience, #skills, #other {
-    margin-top: 2rem;
+    margin-top: 24px;
+}
+
+@media (min-width: 1200px) {
+    .container{
+        max-width: 70vw;
+    }
 }
